# metamorphic_testing_of_the_MUSICA_Algorithm_for_x_ray_image_processing

./: .gitignore  CMakeLists.txt  README.md  build_standalone.bat  main.cpp
include/: app.h  bezier_curve.h  file.h  image.h  vk_compute.h  vk_imgui.h  vk_processing.h  vk_state.h  vk_utils.h  vk_window.h
shaders/: clahe_grad_curve.comp  clahe_grad_curve_apply.comp  clahe_histogram.comp  cnr_debug.comp  compile.bat  contrast_curve_apply.comp  contrast_curve_generate.comp  contrast_curve_render.comp  gradation_curve_debug_render.comp  gradation_curve_generate.comp  gradation_curve_render.comp  gradation_histogram.comp  img_addition.comp  img_apply_gradation_curve.comp  img_cnr.comp  img_difference.comp  img_downsample.comp  img_histogram_max.comp  img_histogram_render.comp  img_linear.comp  img_max_reduce.comp  img_normalize.comp  img_relevant.comp  img_sdev.comp  img_smooth.comp  img_smooth_upsampled.comp  img_sqrt.comp  img_to_rgb.comp  img_upsample.comp  min_reduce.comp  noise_hist.comp  noise_hist_render.comp  noise_reduction.comp
src/: app.cpp  bezier_curve.cpp  file.cpp  image.cpp  vk_compute.cpp  vk_imgui.cpp  vk_processing.cpp  vk_state.cpp  vk_utils.cpp  vk_window.cpp
test/mean_cnr/: script.py
test/metamorphic_test/: pyproject.toml  run.bat  script.py
test/reg_vs_dir_delta/: pyproject.toml  results.csv  script.py
test/standalone/: README.md  main.cpp
